# hedge

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  TASKS.md  config.example.yaml  config.speech.example.yaml  fly.toml  pyproject.toml
deploy/: config.yaml
docs/: DEPLOYMENT_PLAN.md  EDGE_ANALYSIS.md  GO_LIVE_PLAN.md  MENTION_HAZARD.md  PERP_STRATEGY.md  RUNBOOK.md
hedge/: __init__.py  alerts.py  config.py  eventlog.py  guard.py  runner.py  signal.py  state.py
lolpred/: .gitignore  LICENSE  README.md  pyproject.toml
lolpred/docs/: CONTRACTS.md  DESIGN.md  EDGE_PROTOCOL.md  EDGE_SEARCH.md  RESULTS.md  RESUME_STATE.md  data.md
lolpred/docs/evidence/: m3_bets_final.parquet  m3_final_output.txt
lolpred/lolpred/: series.py
lolpred/lolpred/backtest/: betting.py  edge_protocol.py  kalshi_eval.py  report.py  walkforward.py
lolpred/lolpred/data/: kalshi_market.py  kalshi_micro.py  leaguepedia.py  loader.py  synthetic.py
lolpred/lolpred/features/: build.py  ratings.py
lolpred/lolpred/models/: xgb.py
lolpred/scripts/: backtest.py  build_features.py  download_data.py  eval_vs_kalshi.py  fetch_kalshi_micro.py  fetch_kalshi_multi.py  fetch_kalshi_odds.py  fetch_leaguepedia.py  m3_confirmatory.py  predict.py  train.py
lolpred/tests/: test_betting.py  test_edge_protocol.py  test_features.py  test_kalshi_eval.py  test_kalshi_market.py  test_kalshi_micro.py  test_leaguepedia.py  test_leakage.py  test_loader.py  test_model.py  test_ratings.py  test_report.py  test_scripts.py  test_series.py  test_synthetic.py  test_walkforward.py
scripts/: audit_causal_anchor.py  (+46 more)
(+78 files in other folders)
